# gui

./: .gitattributes  .gitignore  1.cmd  1.sh  COMMAND_IOCTL_MAPPING.md  COMPLETION_PROGRESS.md  FileMapping.go  HyperDbg.go  HyperDbg_windows_amd64.syso  README.md  RUST_INSTALL_README.md  api_design.md  app.sh  application.go  ark.go  ark_test.go  break.go  break.json  break.txt  bsod  bsod.txt  bug_fixes.md  build-driver-ewdk.ps1  build.cmd  callBackTest_test.go  clang  cmd.cmd  cpu.go  cpu_dism_table.json  cpu_dism_table.txt  cpu_stack_table.json  cpu_stack_table.txt  debuggerError_enum_gen.go  debugger_test copy.go.bak  debugger_test.go  debugger_test.md  fixerror_test.go  fmt.cmd  go.mod  go.sum  (+68 more)
HyperDbg_rust/rust-driver/: Cargo.toml  IMPLEMENTATION_PROGRESS.md  README.md  build.ps1  build.rs  events.rs  handlers_gen.rs  lib.rs  packet.rs  protocol_lib.rs  types_gen.rs
HyperDbg_rust/rust-driver/.cargo/: config.toml
HyperDbg_rust/rust-driver/common/: Cargo.toml
HyperDbg_rust/rust-driver/common/src/: lib.rs
HyperDbg_rust/rust-driver/disassembler/: Cargo.toml
HyperDbg_rust/rust-driver/disassembler/src/: lib.rs
HyperDbg_rust/rust-driver/doc/: RUST_INSTALL_README.md
HyperDbg_rust/rust-driver/driver-framework/: Cargo.toml
HyperDbg_rust/rust-driver/driver-framework/src/: ffi.rs  ioctl.rs
HyperDbg_rust/rust-driver/examples/: build-all.ps1  build.ps1
HyperDbg_rust/rust-driver/examples/netdemo/: Cargo.toml  build.ps1  build.rs  netdemo.go  netdemo.sys  netdemo_test.go
HyperDbg_rust/rust-driver/examples/sample-kmdf-driver/: Cargo.toml
HyperDbg_rust/rust-driver/examples/sample-umdf-driver/: Cargo.toml
HyperDbg_rust/rust-driver/examples/sample-wdm-driver/: Cargo.toml
HyperDbg_rust/rust-driver/examples/sysdemo/: Cargo.toml  build.ps1  build.rs  sysdemo.sys
HyperDbg_rust/rust-driver/handlers_gen/: emit.rs  mod.rs  router.rs
HyperDbg_rust/rust-driver/hyperhv/: Cargo.toml
HyperDbg_rust/rust-driver/hyperhv/src/: debugger_asm.rs  dirty_logging.rs  halted_core.rs  hooks.rs  hyper_evade.rs  kernel_tests.rs  lbr.rs  loader.rs  memory.rs  pci.rs  process.rs  processor.rs  scheduler.rs
HyperDbg_rust/rust-driver/hyperkd/: Cargo.toml
HyperDbg_rust/rust-driver/hyperkd/src/: ud.rs  user_access.rs
HyperDbg_rust/rust-driver/kd/: Cargo.toml  IMPLEMENTATION_STATUS.md  build.ps1  build.rs  build_errors.txt  hyperdbg_kd.sys
HyperDbg_rust/rust-driver/kd/src/: hyperdbg_api.rs  lib.rs  ud.rs
HyperDbg_rust/rust-driver/logger/: Cargo.toml
HyperDbg_rust/rust-driver/logger/src/: lib.rs
HyperDbg_rust/rust-driver/net/: Cargo.toml
HyperDbg_rust/rust-driver/net/src/: http.rs  json.rs  lib.rs  logger.rs  models.rs  models_gen.rs  wsk.h
HyperDbg_rust/rust-driver/net/tests/: json_test.rs
HyperDbg_rust/rust-driver/pdbex/: Cargo.toml
HyperDbg_rust/rust-driver/types_gen/: common.rs  event.rs  event_breakpoint.rs  event_cpuid.rs  event_cr_access.rs  event_debug_print.rs  event_dr_access.rs  event_ept_violation.rs  event_exception.rs  event_hidden_hook.rs  event_io_port.rs  event_memory.rs  event_module.rs  event_msr.rs  event_process.rs  event_syscall.rs  event_thread.rs  event_trap.rs  event_tsc.rs  event_vmx.rs  mod.rs  register.rs  response.rs
debugger/driver/sysDemo/: CMakeLists.txt  build.ps1
rust-driver/: Cargo.toml  IMPLEMENTATION_PROGRESS.md  README.md  bug_fixes.md  build-all.cmd  setup_ewdk_env.ps1
rust-driver/driver-framework/: Cargo.toml
rust-driver/driver-framework/src/: device.rs  ioctl.rs  lib.rs  logger.rs
rust-driver/erebus-main/: Cargo.toml  LICENSE.md
rust-driver/erebus-main/km/: Cargo.toml  build.rs  erebus.inx
rust-driver/erebus-main/km/src/: device.rs  logger.rs  memory.rs  utils.rs
rust-driver/erebus-main/shared/: Cargo.toml
rust-driver/erebus-main/shared/src/: ioctl.rs  lib.rs
rust-driver/erebus-main/um/: Cargo.toml
rust-driver/erebus-main/um/src/: driver.rs  m.go
rust-driver/examples/: Makefile.toml
rust-driver/examples/erebus-main/: README.md
rust-driver/examples/erebus-main/km/: Makefile.toml
rust-driver/examples/netdemo/: BSOD_FIX_REPORT.md  Cargo.toml  build.ps1  build.rs  m.go  m_test.go  netdemo.sys  netdemo_test.go
rust-driver/examples/netdemo/.cargo/: config.toml
rust-driver/examples/netdemo/src/: CMakeLists.txt  FindWdk.cmake  bsod  build.ps1  constants.rs  lib.rs  m.go  test_netdemo.go  test_wsksample.go  wsksample.sys  wsksmple.c  wsksmple.tmh
rust-driver/examples/sample-umdf-driver/: Cargo.toml
rust-driver/examples/sample-wdm-driver/: Cargo.toml
rust-driver/examples/sysdemo/: Cargo.toml  README.md  iocodeDemo.go  sysdemo.inx  sysdemo.sys
rust-driver/examples/sysdemo/src/: constants.rs  device.rs  dispatch.rs  driver.h  lib.rs  logger.rs  m.go  utils.rs
rust-driver/hyperhv/: Cargo.toml
rust-driver/hyperhv/src/: apic.rs  asm.rs  broadcast.rs  callbacks.rs  communication.rs  compatibility.rs  ept_vpid.rs  events.rs  globals.rs  idt.rs  interrupts.rs  lib.rs  meta_dispatch.rs  serial_connection.rs  smi.rs  switch_layout.rs  termination.rs  thread.rs  tracing.rs  transparency.rs  vmcall.rs
rust-driver/hyperhv/src/vmm/: mod.rs  sync.rs  vmcs.rs  vmx.rs
rust-driver/hyperkd/: Cargo.toml
rust-driver/hyperkd/src/: attaching.rs  callstack.rs  commands.rs  debugger.rs  driver.rs  extension_commands.rs  ffi.rs  halted_broadcast.rs  lib.rs  network.rs  process.rs  thread.rs  user_debug.rs
rust-driver/kd/: Cargo.toml  build.rs  hyperdbg_kd.sys
rust-driver/kd/src/: hyperdbg_api.rs  kd.rs  lib.rs  ud.rs
rust-driver/kd/src/framework/: log.rs
rust-driver/kd/src/go_script/: GO_HOOK_COMPLETE_GUIDE.md  executor.rs  extractor.rs  generator.rs  lib.rs  mod.rs  visitor.rs
rust-driver/net/: README.md  run_test.ps1
rust-driver/net/src/: http.rs  lib.rs  logger.rs
rust-driver/net/tests/: Cargo.toml  http_test.rs
rust-driver/protocol/: Cargo.toml
rust-driver/protocol/src/: events.rs  types.rs
rust-driver/wsk/: Cargo.toml
rust-driver/wsk/src/: buffer.rs  lib.rs  message.rs  provider.rs  socket.rs
sysBug/: CMakeLists.txt  HyperDbgHyperLogIntrinsics.h  bug.txt  driver.c
(+5265 files in other folders)
