[workspace]
resolver = "2"
members = [
    "driver-framework",
    "examples/netdemo",
    "examples/sysdemo",
    "hyperhv",
    "hyperkd",
    "protocol",
    "net",
    "disassembler",
    "pdbex",
    "kd",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/HyperDbg/HyperDbg"
readme = "README.md"

[workspace.dependencies]
protocol = { path = "protocol" }
net = { path = "net" }
driver-framework = { path = "driver-framework" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
