[package]
name = "hyperdbg-driver"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
wdk-alloc = "0.3"
wdk-sys = "0.3"
wdk-panic = "0.3"
net = { path = "net" }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

[build-dependencies]
wdk-build = "0.3"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
