[package]
name = "driver-framework"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
wdk = "0.4"
wdk-sys = "0.5"
wdk-alloc = "0.4"
wdk-panic = "0.4"

[build-dependencies]
wdk-build = "0.4"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
