[package]
name = "protocol"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
bincode = { version = "2.0", default-features = false, features = ["derive", "alloc"] }
num_enum = { version = "0.7", default-features = false }

[features]
default = []
kernel = []
