[package]
name = "driver-framework"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
wdk = "0.4.1"
wdk-sys = "0.5.1"
wdk-alloc = "0.4.1"
wdk-panic = "0.4.1"

[build-dependencies]
wdk-build = "0.5.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
