[package]
name = "net"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
driver-framework = { path = "../driver-framework" }
wdk-alloc = "0.4"
wdk-sys = "0.5"
wdk = "0.4"
wdk-panic = "0.4"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[features]
default = []
