[package]
name = "net"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
logger = { path = "../logger" }
driver-framework = { path = "../driver-framework" }
wdk-alloc = "0.4.1"
wdk-sys = "0.5.1"
wdk = "0.4.1"
wdk-panic = "0.4.1"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[features]
default = []
