[package]
name = "um"
description = "Erebus User-Mode Application"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
hex = "0.4.3"
sysinfo = "0.33.0"
shared = { path = "../shared" }
windows = { version = "0.57.0", features = [
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_Storage_FileSystem",
] }
