[package]
name = "sysdemo"
version = "0.1.0"
edition = "2021"
description = "A sample WDM driver that demonstrates WDM in RUST"
license = "MIT OR Apache-2.0"

[package.metadata.wdk.driver-model]
driver-type = "WDM"

[lib]
crate-type = ["cdylib"]
test = false

[build-dependencies]
wdk-build = "0.5"

[dependencies]
wdk = "0.4"
wdk-alloc = "0.4"
wdk-panic = "0.4"
wdk-sys = "0.5"
driver-framework = { path = "../../driver-framework" }

[features]
default = []

[profile.dev]
lto = true
panic = "abort"

[profile.release]
lto = true
panic = "abort"
