[package]
name = "netdemo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
driver-framework = { path = "../../driver-framework" }
net = { workspace = true }
wdk = "0.4"
wdk-sys = "0.5"
wdk-alloc = "0.4"
wdk-panic = "0.4"

[build-dependencies]
wdk-build = "0.4"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
debug = "line-tables-only"
