[package]
name = "netdemo"
version = "0.1.0"
edition = "2021"

[package.metadata.wdk.driver-model]
driver-type = "WDM"

[lib]
crate-type = ["cdylib"]

[dependencies]
common = { path = "../../common" }
driver-framework = { path = "../../driver-framework" }
net = { path = "../../net" }
logger = { path = "../../logger" }
wdk = "0.4.1"
wdk-sys = "0.5.1"
wdk-alloc = "0.4.1"
wdk-panic = "0.4.1"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

[build-dependencies]
wdk-build = "0.5.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
debug = "line-tables-only"
