[package]
name = "go-types"
version = "0.1.5"
edition = "2021"
license = "BSD-3-Clause"

[lib]
name = "go_types"
path = "lib.rs"

[features]
default = []
btree_map = []
serde_borsh = []

[dependencies]
go-parser = { path = "../goscript_parser" }
num-bigint = { version = "0.4", default-features = false }
num-rational = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }
ordered-float = { version = "3.0", default-features = false }